[Presentation API] OffscreenPresentationManager should only interact with top level receiver frame

When receiver page has sub frames, all frames will try to register receiver callbacks to OPM with the same presentation_id, triggering DCHECK failure. Also any frame reset will end offscreen presentation.

According to https://github.com/w3c/presentation-api/issues/367, only top level frame matters. This patch adds a is_main_frame_ flag to PresentationServiceImpl to indicate top level frame.

BUG=734798

Review-Url: https://codereview.chromium.org/2949053002
Cr-Commit-Position: refs/heads/master@{#483436}

Former-commit-id: dca98f635b5337b08df7a3d9480800adfeaba4c5